Updating English translations
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@183 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/communicationUser/multilang/communicationUserBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/communicationUser/multilang/communicationUserBundle_en.properties
@@ -22,7 +22,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 notifyUser = Contact the user
-refreshedTime = List refreshed by 
+refreshedTime = List refreshed every 
 seconds = seconds
 #CBO : REMOVE connectedUsers = Connected users
 #CBO : REMOVE authorMessage = Message
@@ -36,8 +36,8 @@ language = Language
 clear = Clear
 save = Save the discussion
 logout = Quit
-exportDiscussion = Discussion of
-currentDiscussion = Discussion
+exportDiscussion = Export discussion
+currentDiscussion = The current discussion
 messageTooLong = The message is limited to
 nbMaxTextArea = 1240
 characters = characters
