--- a/config-core/src/main/config/properties/com/silverpeas/external/filesharing/multilang/fileSharingBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/external/filesharing/multilang/fileSharingBundle_en.properties
@@ -23,12 +23,12 @@
 #
 fileSharing.test = this is a test message...
 fileSharing.onglet = thumb yakyak
-fileSharing.alt =  text of <alt> tag
+fileSharing.alt =   <alt> tag text
 fileSharing.tickets = My tickets
 fileSharing.ticket = Ticket
 fileSharing.addTicket = Add a ticket
 fileSharing.deleteTickets = Delete selected tickets
-fileSharing.interneLink = Interne link
+fileSharing.interneLink = Internal link
 fileSharing.endDate = End validity date
 fileSharing.nbAccess = Access number
 fileSharing.nbAccessMax = Max access number
@@ -36,21 +36,21 @@ fileSharing.operation = Operations
 fileSharing.updateTicket = Update a ticket
 fileSharing.createTicket = Create a ticket
 fileSharing.deleteTicket = Delete a ticket
-fileSharing.fileId = File id
+fileSharing.fileId = File ID
 fileSharing.componentId = Component id
 fileSharing.versioning = Versioning
 fileSharing.creationDate = Create 
 fileSharing.by = by
 fileSharing.updateDate = Update
 fileSharing.endDate = End of validity
-fileSharing.nbAccessMax = Number of access max
-fileSharing.nbAccess = Number of access 
+fileSharing.nbAccessMax = maximum number of accesses
+fileSharing.nbAccess = Number of accesses 
 fileSharing.keyFile = Key
 fileSharing.confirmTicket = Our ticket
-fileSharing.confirmDeleteTicket = Do you really want to delete ticket 
+fileSharing.confirmDeleteTicket = Do you really want to delete the ticket?
 fileSharing.downloadDate = Download on
 fileSharing.IP = IP
-fileSharing = Access url : 
+fileSharing = Access URL: 
 fileSharing.expiredTicket = Expired ticket
 fileSharing.nameFile = File name 
 fileSharing.sizeFile = Size
