--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_en.properties
@@ -26,7 +26,7 @@ ContainsTooLargeText = is limited to
 Characters = characters
 
 userPanel = Select a user
-clearUser = Init field
+clearUser = Initialize field
 
 removeFile = Remove this file
 removeImage = Remove this image
@@ -72,9 +72,9 @@ UnorderedList = Bullets
 RemoveIndent = Remove indent
 Indent = Indent
 Hyperlink = Hyperlink
-LienURL = Please enter the URL link here 
+LienURL = Please enter the URL here 
 URL = URL 
-PageTropGrosse = Error! the WYSIWYG field contains too many characters to be saved.
+PageTropGrosse = Saving error! The WYSIWYG field contains too many characters.
 ErreurScript = Error! your HTML code contains scripts.  Only static pages (without script) are authorized.  
 Script = must not contain scripts.
 Black = Black
