--- a/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_en.properties
@@ -113,7 +113,7 @@ JDP.GroupManagersDelete = Remove all Managers of the group
 JDP.GroupManagersDeleteConfirmation = Are you sure you want to remove all Managers of the group?
 
 JDP.usersFound = user(s) found
-JDP.inProgress = Search in progress! Please wait...
+JDP.inProgress = Searching! Please wait...
 JDP.LDAPField = LDAP field
 JDP.searchSyntax = Help
 JDP.fieldSyntax = Search syntax
