--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
@@ -80,7 +80,7 @@ JSPP.creationSpace = Create a space
 JSPP.creationSubSpace = Create a sub-space
 JSPP.updateSpace = Update a space
 JSPP.creationInstance = Add a service
-JSPP.roleDescription = Profile description
+JSPP.roleDescription = Role description
 
 //erreurs
 MustContainsText = must be completed
@@ -112,14 +112,14 @@ JSPP.ComponentOrder = Move service
 JSPP.ComponentPlace = Move before the service
 
 // Copy/Cut/Paste component
-JSPP.CopyOf = Copie de 
+JSPP.CopyOf = Copy of 
 
 // Deplacement de composant
 JSPP.SpaceIn = Move in the space
-JSPP.SpacesNotInMaintenance	= The origin and destination space must be in Maintenance mode...
+JSPP.SpacesNotInMaintenance = The origin and destination space must be in Maintenance mode...
 JSPP.MessageConfirmMovingComponentInSpace = Do you really want to move this component in this space?
-JSPP.ExistingComponentName = Moving not allowed... A component has the same name in the destination space.
-JSPP.movingInProgress = Moving in progress...
+JSPP.ExistingComponentName = Move not allowed... A component has the same name in the destination space.
+JSPP.movingInProgress = Move in progress...
 
 //Sauvegarde
 JSPP.BackupUnlimited = Backup/Restore some components
@@ -133,18 +133,18 @@ JSPP.ErrorSpaceUpdate = Error during the update of the space
 JSPP.ErrorSpaceMessage = Check that another space on the same level does not already have the same name!
 
 //Corbeille
-JSPP.Bin = Trash of spaces and components
+JSPP.Bin = Spaces and components bin
 JSPP.BinRemoveDate = Removing date
 JSPP.BinRestore = Restore
 JSPP.BinRestoreSelected = Do you really want to restore the selected items?
 JSPP.BinDelete = Remove completely
-JSPP.BinEmpty = The trash is empty!
-JSPP.BinDeleteConfirm =  Do you really want to remove this items and all its contents?
-JSPP.BinDeleteConfirmSelected = Do you really want to remove the selected items and all their contents?
+JSPP.BinEmpty = The bin is empty!
+JSPP.BinDeleteConfirm =  Do you really want to remove this items and all of its contents?
+JSPP.BinDeleteConfirmSelected = Do you really want to remove the selected items and all the contents?
 
 JSPP.publicComponent = Public access
 JSPP.hiddenComponent = Hidden
-JSPP.inheritanceBlockedComponent = Inheritance of rights
+JSPP.inheritanceBlockedComponent = Rights inheritance
 JSPP.localRights = Local rights
 JSPP.inheritedRights = Inherited rights
 
@@ -161,4 +161,4 @@ JSPP.SpaceAppearance = Skin
 JSPP.SpaceLook = Theme
 JSPP.WallPaper = Header
 
-JSPP.inProgress = Processing in progress!<br/>Please wait...
+JSPP.inProgress = Processing!<br/>Please wait...
