--- a/config-core/src/main/config/properties/com/silverpeas/pdcSubscription/multilang/pdcsubscription_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/pdcSubscription/multilang/pdcsubscription_en.properties
@@ -30,8 +30,8 @@ Date     = Date:
 URL      = Link: 
 Axis     = Axis: 
 notification.delete.title = Your center of interest has been removed
-deleteOnAxisMessage = An axis of your Center of Interest has been removed. Center of Interest have been removed too.
-deleteOnValueMessage = A value of your Center of Interest has been removed. Center of Interest have been removed too.
+deleteOnAxisMessage = An axis of your Center of Interest has been removed. Center of Interest has been removed too.
+deleteOnValueMessage = A value of your Center of Interest has been removed. Center of Interest has been removed too.
 DocumentName = Document: 
 Path = Path: 
 pdcClassification = My Center of Interest.
