--- a/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/portletsBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/portletsBundle_en.properties
@@ -48,7 +48,7 @@ portlets.portlet.componentInstance.pref.instanceId = Component id
 portlets.portlet.iFrame.pref.url = URL
 portlets.portlet.iframe.pleaseURL = Please enter a website address!
 
-portlets.portlet.helloSilverpeas.welcome = Welcome to your new home page!<br/>You can modify the contents and page layout as you wish.<br/>Windows can be moved using Drag And Drop!
+portlets.portlet.helloSilverpeas.welcome = Welcome to your new home page!<br/>You can modify the contents and page layout as you wish.<br/>Windows can be moved above and below using 'Drag And drop'!
 
 # Admin Page
 portlets.createPortlet=Add a new window
