--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/alertUserPeas/multilang/alertUserPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/alertUserPeas/multilang/alertUserPeasBundle_en.properties
@@ -23,4 +23,4 @@
 #
 AuthorMessage = Message
 AlertsConfirmation = The users have been notified.
-AlertInProgress = Please wait... Processing under way.
+AlertInProgress = Processing. Please wait... 
