--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/multilang/domainSQLBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/multilang/domainSQLBundle_en.properties
@@ -25,4 +25,4 @@
 #  Specific properties names used in domain Silverpeas
 #
 
-informationSpecifique = Specific Info
+informationSpecifique = Specific Information
