--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/genericPanelPeas/multilang/genericPanelPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/genericPanelPeas/multilang/genericPanelPeasBundle_en.properties
@@ -24,7 +24,7 @@
 
 genericPanelPeas.usersList       = Users
 genericPanelPeas.searchResult    = Result 
-genericPanelPeas.searchCriteres  = Search criterias
+genericPanelPeas.searchCriteres  = Search criteria
 genericPanelPeas.selectedNumber  = Selected elements
 
 genericPanelPeas.allUsers        = All users
