--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_en.properties
@@ -31,7 +31,7 @@ channelType1=e-mail
 channelType2=SMS
 channelType3=Window
 channelType4=SilverMail
-channelType5=Suppression
+channelType5=Deletion
 
 defaultAddressPOPUP=<Pop-up>
 defaultAddressSILVERMAIL=<Notification box>
@@ -51,11 +51,11 @@ messagePriority2=Error related
 subject=Subject
 From=From
 
-testMsgTitle=Notification Message Test
+testMsgTitle=Notification Test Message 
 testMsgBody=This is the body of the test message...
 testMsgFrom=silverpeas@silverpeas.com
 
 
-guestNotAllowedTitle=Impossible to notify !
-guestNotAllowedBody1=Impossible to send the notification :
-guestNotAllowedBody2=Sorry, but as a guest, you can't notify.
+guestNotAllowedTitle=Impossible to notify!
+guestNotAllowedBody1=Impossible to send the notification:
+guestNotAllowedBody2=Sorry, you can't notify as a guest.
