--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_en.properties
@@ -44,6 +44,6 @@ cancel = Cancel
 close = Close
 ParametrerNotification = Parameter
 LireNotification = Notification box
-Notifier = Sending of a notification
+Notifier = Send a notification
 DeleteAllNotif = Remove all messages
-ConfirmDeleteAllNotif = Do you really whant to delete all messages ?
+ConfirmDeleteAllNotif = Do you really whant to delete all messages?
