--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_en.properties
@@ -40,7 +40,7 @@ Thesaurus = Enable thesaurus
 Activate = Enable
 Deactivate = Disable
 
-DragDrop = Enable Drag And Drop
+DragDrop = Enable Drag And drop
 
 OnlineEditing = Enable MS Office online editing
 WebdavEditing = Enable Webdav online editing
@@ -74,30 +74,30 @@ default = Default
 
 UndefinedFavoriteSpace = Undefined
 
-TestPopUpExplanation = You have just tested the sending of a notification in a window. If the test succeeded, a browser window should open.
-TestSilverMailExplanation = You have just tested the sending of a notification in a notification box. If the test succeeded, you should have received a notification in your notification box.
-TestSMTPExplanation = You have just tested the sending of a notification in mail box. If the test succeeded, you should have received a message in your external mail service.
+TestPopUpExplanation = You have just tested the sending of a notification in a window. If the test was successful, a browser window should open.
+TestSilverMailExplanation = You have just tested the sending of a notification in a notification box. If the test was successful, you should have received a notification in your notification box.
+TestSMTPExplanation = You have just tested the sending of a notification in mail box. If the test was successful, you should have received a message in your external mail box.
 
 
 MesNotifications = My notifications
 ParametrerNotification = Parameter
 LireNotification = Notification box
-Notifier = Sending of a notification
+Notifier = Send a notification
 MessageSuppressionCanal = Do you really want to delete this protocol?
 MessageSuppressionRegle = Do you really want to delete this guideline?
 
 UserRights = Rights
 OldPassword = Old password
 NewPassword = New password
-NewPasswordConfirm = New password confirmation
+NewPasswordConfirm = Confirm new password 
 WrongNewPwd = Wrong password confirmation...
 MessageOK = Your profile has been successfully updated...
 Error_bad_credential = Bad credentials, try again...
-Error_unknown = Unable to update your profile, please contact your administrator
+Error_unknown = Unable to update your profile, please contact your Administrator
 ModifyPasswordNotAllowed1 = You are not allowed to modify your password here.
-ModifyPasswordNotAllowed2 = Contact your administrator...
-LengthPwdLabel = characters minimum
-WrongLength = Incorrect password length !
-NoSpacesInPassword = The password must not contain white spaces !
+ModifyPasswordNotAllowed2 = Contact your Administrator...
+LengthPwdLabel = minimum characters 
+WrongLength = Incorrect password length!
+NoSpacesInPassword = The password must not contain any blank spaces!
 
-PP.ChangeLookAlert = Personal look will be apply only to spaces with no look set
+PP.ChangeLookAlert = A personal look will only be applied to spaces with no set look 
