--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/portlet/multilang/portletBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/portlet/multilang/portletBundle_en.properties
@@ -27,7 +27,7 @@
 
 fixColWidth=Fix column width
 addAColumn=Add a column
-saveChanges=save
+saveChanges=Save
 revert=Revert to previous version
 colSizeFormat=use the following format : "n%", "npx" or "*"
 addToNewCol = Portlets to add to a new column
