--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/selectionPeas/multilang/selectionPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/selectionPeas/multilang/selectionPeasBundle_en.properties
@@ -25,40 +25,40 @@
 selectionPeas.usersList       = Users
 selectionPeas.groupsList      = Groups
 
-selectionPeas.searchUser       = Search among the users
-selectionPeas.searchGroup      = Search among the groups
+selectionPeas.searchUser       = Search among uses
+selectionPeas.searchGroup      = Search among groups
 
-selectionPeas.helpBrowse        = Browse the whole list
-selectionPeas.helpSearchElement = Search a user
-selectionPeas.helpSearchSet     = Search a group
+selectionPeas.helpBrowse        = Browse through the whole list
+selectionPeas.helpSearchElement = Search for a user
+selectionPeas.helpSearchSet     = Search for a group
 selectionPeas.helpCart          = Show the cart
 selectionPeas.removeFromCart    = Delete the selected elements
 selectionPeas.removeAllFromCart = Delete the whole cart
-selectionPeas.confirmRemoveFromCart    = Do you really want to delete the selected elements ?
-selectionPeas.confirmRemoveAllFromCart = Do you really want to delete the whole cart ?
+selectionPeas.confirmRemoveFromCart    = Do you really want to delete the selected elements?
+selectionPeas.confirmRemoveAllFromCart = Do you really want to delete the whole cart?
 
 selectionPeas.searchResult    = Results 
-selectionPeas.searchCriteres  = Search criterias
+selectionPeas.searchCriteres  = Search criteria
 selectionPeas.selectedNumber  = Selected elements
 selectionPeas.quickSelect = Quick selection
 selectionPeas.filter = Filter
 
-selectionPeas.selectAll = All to select
-selectionPeas.unSelectAll = All to deselect
+selectionPeas.selectAll = Select all
+selectionPeas.unSelectAll = Deselect all 
 
 selectionPeas.rootName = Root
-selectionPeas.usersAll = Users : 
+selectionPeas.usersAll = Users: 
 selectionPeas.usersOfGroup = Users of the group 
 selectionPeas.groupsAll = "Root" groups  
 selectionPeas.groupsOfGroup = Sub-groups of 
 
 selectionPeas.groupsOfUser = Groups of membership
 selectionPeas.directUsersOfGroup = Users
-selectionPeas.groupParent = Group relative
+selectionPeas.groupParent =  Group Relative
 
 selectionPeas.selectedGroups = Selected groups
 selectionPeas.selectedUsers = Selected users
 
 selectionPeas.domain = Domain
 
-selectionPeas.inProgress = Data processing in progress !<br/>Please wait...
+selectionPeas.inProgress = Data being processed!<br/>Please wait...
