--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_en.properties
@@ -31,11 +31,11 @@ silverStatisticsPeas.to                          = To
 silverStatisticsPeas.filter                      = Filter
 silverStatisticsPeas.connectionNumber            = Number of connections
 silverStatisticsPeas.export                      = Export
-silverStatisticsPeas.openUserPanelPeas           = Access to user panel
+silverStatisticsPeas.openUserPanelPeas           = Open user panel
 silverStatisticsPeas.statistics                  = Statistics
 silverStatisticsPeas.RefreshedEveryMinutes       = List refreshed every minute
 silverStatisticsPeas.CloseSession                = Close session
-silverStatisticsPeas.NotifyUser                  = Notify user by popup
+silverStatisticsPeas.NotifyUser                  = Notify user
 silverStatisticsPeas.Actions                     = Actions
 silverStatisticsPeas.ConfirmKickSession          = Do you confirm the removal of the user session:
 silverStatisticsPeas.durationAvg                 = Average duration
@@ -52,7 +52,7 @@ silverStatisticsPeas.ServicesNumber	 	 = Type of service distribution
 silverStatisticsPeas.InstancesNumber	 	 = Service number
 silverStatisticsPeas.VolumeNumber	 	 = Publication distribution
 silverStatisticsPeas.VolumeDocsNumber	 	 = Attached file distribution
-silverStatisticsPeas.FromSpace	 	 	 = of the space
+silverStatisticsPeas.FromSpace	 	 	 = from the space
 silverStatisticsPeas.AttachmentsNumber	 	 = Attached file number
 silverStatisticsPeas.AttachmentsSize	 	 = Attached file size
 silverStatisticsPeas.VolumeDocsSize	 	 = Attached file size distribution
