--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_en.properties
@@ -43,19 +43,19 @@ validator = Validator
   alt = Locked by
   checkIn = Check In
   checkOut = Check Out
-  addNewVersion = Add a new Version
+  addNewVersion = Add a new version
   newDocumentVersion = New document version
   new_document = New Document
   browse = Browse
   typeOfVersion = Type of version
   public = Public
   archive = Work
-  required = required
+  required = Required
   document = Document
-  nomVide = You have to fill all required fields.
-  pleaseFill = Please fill in mandatory fields.
+  nomVide = You must complete all required fields.
+  pleaseFill = Please complete all required fields.
 
-  allVersions = All the versions...
+  allVersions = All versions...
 
   versions.caption   = Versions 
   readerlist.caption = Read list
