--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/wysiwyg/multilang/wysiwygBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/wysiwyg/multilang/wysiwygBundle_en.properties
@@ -25,23 +25,23 @@ Close = Close
 Cancel = Cancel 
 Image = Images
 Galleries = Galleries
-Links = Liens
+Links = Links
 Oui = Yes
 Non = No
 LienURL = A link to a URL must be specified here 
-PageTropGrosse = Error, this HTML page is too large to be saved. 
+PageTropGrosse = Error! This HTML page is too large to be saved. 
 Save = Save
 SaveAndExit = Save and exit
 
 # For Website only
 ErreurmPrefix = You have not entered a value in the field 
-ErreurFichierUpload = Error, only static HTML pages or images can be uploaded 
+ErreurFichierUpload = Error! Only static HTML pages or images can be uploaded 
 FichierUpload = Image to upload
 ErreurmSuffix = . This value must be entered.
 NameFile = The filename
-MustNotContainSpecialChar = must not contain the following characters :
+MustNotContainSpecialChar = must not contain the following characters:
 Char7 = & ; + % # ' ² é è ç à ^ ù ° ¨ £ µ § ¤
-RequiredField = Mandatory
+RequiredField = Required
 UploadTitle = File upload
 Valider = Ok
 Annuler = Cancel
