--- a/config-core/src/main/config/properties/com/silverpeas/mylinks/multilang/myLinksBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/mylinks/multilang/myLinksBundle_en.properties
@@ -23,8 +23,8 @@
 #
 myLinks.links = Favorits links
 myLinks.linksByComponent = Links by composant
-myLinks.createLink = > Create link
-myLinks.updateLink = > Update link
+myLinks.createLink = > Create a link
+myLinks.updateLink = > Update a link
 myLinks.addLink = Add a link
 myLinks.visible = Visible in banner page 
 myLinks.url = Url
@@ -33,4 +33,4 @@ myLinks.operation = Operations
 myLinks.deleteLinks = Delete selected links
 myLinks.deleteSelection = Do you really want to delete selected links?
 myLinks.messageConfirm = The link has been added to your favorites
-myLinks.retour = Return to component
+myLinks.retour = Return to the component
